<resources>
    <string name="app_name">TicketList</string>
    <string name="login">Войти</string>
    <string name="all_ticket">Все Заявки</string>
    <string name="name">Имя монтажника</string>
    <string name="ticket_today">Заявки на сегодня</string>
    <string name="number_ticket">Номер заявки:</string>
    <string name="fio">ФИО:</string>
    <string name="address">Адрес:</string>
    <string name="dog_number">Договор:</string>
    <string name="date_created">Дата создания:</string>
    <string name="date_start">Дата начала:</string>
    <string name="date_final">Дата окончания:</string>
    <string name="mobile">Контакный телефон:</string>
    <string name="task">Описание:</string>
    <string name="info_abon">Информация о абоненте</string>
    <string name="info_ticket">Информация о заявке</string>
    <string name="exit">Выход</string>
    <string name="back">Назад</string>
    <string name="login_name">Логин</string>
    <string name="password">Пароль</string>
</resources>